+ Show restarants name in tableview

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 DemoCocoaPods.xcodeproj/xcuserdata
 DemoCocoaPods.xcodeproj/project.xcworkspace/xcuserdata
+DemoCocoaPods.xcworkspace/xcuserdata
+Pods/Pods.xcodeproj/xcuserdata
